# taking_the_temperature

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
docs/: Doxyfile  annotated.html  annotated_dup.js  class_temperature_sensor-members.html  class_temperature_sensor.html  class_temperature_sensor.js  class_vme_system-members.html  class_vme_system.html  class_vme_system.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_func.html  functions_rela.html  index.html  navtreedata.js  navtreeindex0.js
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  related_0.js  searchdata.js
examples/: report.yaml
libs/: CMakeLists.txt
libs/supervision/: CMakeLists.txt  supervision.cpp
libs/tmod/: CMakeLists.txt  tmod.cpp  tmod.h
src/: CMakeLists.txt  TemperatureSensor.cpp  TemperatureSensor.h  VmeSystem.cpp  VmeSystem.h
tests/: CMakeLists.txt  test_TakingTheTemperature.cpp
